@@ -61,9 +61,9 @@ public abstract class Terminal<Output extends Window> extends ConfirmationScreen
 
         output.getContents().add(prompt);
 
-        getConfirmCodes().remove(new Integer(KeyEvent.VK_Y));
-        getDenyCodes().remove(new Integer(KeyEvent.VK_N));
-        getCancelCodes().remove(new Integer(KeyEvent.VK_Q));
+        getConfirmCodes().remove(Integer.valueOf(KeyEvent.VK_Y));
+        getDenyCodes().remove(Integer.valueOf(KeyEvent.VK_N));
+        getCancelCodes().remove(Integer.valueOf(KeyEvent.VK_Q));
     }
 
     /**
